# The-AI-Engineer-Challenge

./: .gitignore  MERGE.md  README.md  start-app.sh
.cursor/rules/: branch-development-rule.mdc
aimakerspace/: __init__.py
aimakerspace/openai_utils/: __init__.py
api/: README.md  app.py  cache_manager.py  langgraph_agent.py  pyproject.toml  requirements.txt
frontend/: README.md  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/: constants.ts
frontend/app/api/chat/: route.ts
frontend/app/api/chat-pdf/: route.ts
frontend/app/api/pdfs/: route.ts
frontend/app/api/pdfs/[pdfId]/: route.ts
frontend/app/api/upload-pdf/: route.ts
