[project]
name = "beyond-chatgpt"
version = "0.1.0"
description = "gpt-like-a-dev"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    "openai>=1.77.0",
    "pydantic>=2.11.4",
    "python-multipart>=0.0.18",
    "PyPDF2>=3.0.1",
    "aiofiles>=23.2.1",
    "jupyter>=1.1.1",
    "numpy>=1.24.0"
    "python-dotenv>=1.0.0",
]
